--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@font-face {
+  font-family: 'PretendardVariable'; /* 사용할 폰트의 이름을 정의 */
+  src: url('./fonts/PretendardVariable.ttf'); /* 폰트 파일의 위치 */
+}
+
