--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -6,7 +6,7 @@
  display: flex;
  width:1280px;
  height:54px;
- margin:0 auto;
+ margin:10px auto 0 auto;
  font-weight: 600;
  font-size: 16px;
 }
