--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -10,7 +10,14 @@
  font-weight: 600;
  font-size: 16px;
 }
-
+.hr {
+ width: 100vw;
+ height: 1px;
+ position: absolute;
+ top:75px;
+ left:0;
+ border-bottom: 2px solid #F6F6F6;
+}
 .menu-left {
  width: 100%;
  display: flex;
