--- a/src/css/section.css
+++ b/src/css/section.css
@@ -1,7 +1,7 @@
 .section-container {
  font-family: "PretendardVariable";
  width: 1080px;
- margin: 20px auto 0px;
+ margin: 11px auto 0px;
  display: flex;
  flex-direction: column;
  align-items: center
@@ -35,8 +35,6 @@
  list-style: none;
 }
 .img-container1 {
- background: linear-gradient(to right, #fff, #fff 5px, transparent)
- ,url('/public/middle-section.png');
  background-size: cover;
  background-position: top;
  width:582px;
@@ -44,11 +42,17 @@
  border-radius: 10px;
 }
 .img-container2 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/middle-section2.png');
  background-size: cover;
  background-position: top;
  border-radius: 10px;
+}
+.main-img1 {
+ background: linear-gradient(to right, #fff, #fff 5px, transparent)
+ ,url('/public/middle-section.png');
+}
+.main-img2 {
+ background: linear-gradient(to right, #fff, #fff 1px, transparent)
+ ,url('/public/middle-section2.png');
 }
 .img-subtit {
  position: absolute;
