--- a/src/css/section.css
+++ b/src/css/section.css
@@ -1,189 +1,186 @@
 .section-container {
- font-family: "PretendardVariable";
- width: 1080px;
- margin: 11px auto 0px;
- display: flex;
- flex-direction: column;
- align-items: center
+  font-family: "PretendardVariable";
+  width: 1080px;
+  margin: 11px auto 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .main-height {
- width: 100%;
- height: 720px;
+  width: 100%;
+  height: 720px;
 }
 .main-img {
- filter: brightness(50%);
+  filter: brightness(50%);
 }
 .section-img-container {
- display: flex;
- flex-direction: row;
- width: 100%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 .subtit {
- font-family: "PretendardVariable";
+  font-family: "PretendardVariable";
 
- font-size: 32px;
- font-weight: 600;
+  font-size: 32px;
+  font-weight: 600;
 }
-.section-img-container ul{
- display: flex;
- flex-direction: row;
- justify-content: space-between;
- width: 100%;
+.section-img-container ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
 }
 .section-img-container ul li {
- position: relative;
- list-style: none;
+  position: relative;
+  list-style: none;
 }
 .img-container1 {
- background-size: cover;
- background-position: top;
- width:582px;
- height: 204px;
- border-radius: 10px;
+  background-size: cover;
+  background-position: top;
+  width: 582px;
+  height: 204px;
+  border-radius: 10px;
 }
 .img-container2 {
- background-size: cover;
- background-position: top;
- border-radius: 10px;
+  background-size: cover;
+  background-position: top;
+  border-radius: 10px;
 }
 .main-img1 {
- background: linear-gradient(to right, #fff, #fff 5px, transparent)
- ,url('/public/middle-section.png');
+  background: linear-gradient(to right, #fff, #fff 5px, transparent),
+    url("/public/middle-section.png");
 }
 .main-img2 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/middle-section2.png');
+  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+    url("/public/middle-section2.png");
 }
 .img-subtit {
- position: absolute;
- top:20%;
- left:5%;
+  position: absolute;
+  top: 20%;
+  left: 5%;
 }
 .img-subtit span {
- font-size: 28px;
- font-weight: 600;
+  font-size: 28px;
+  font-weight: 600;
 }
 .img-subtit p {
- font-size: 16px;
- color:#666
+  font-size: 16px;
+  color: #666;
 }
 
 .set2-setting {
- width:528px;
- height: 204px;
+  width: 528px;
+  height: 204px;
 }
 .set3-setting {
- width:344px;
- height: 344px;
+  width: 344px;
+  height: 344px;
 }
 .set3-gap {
- /* gap: 15px */
+  /* gap: 15px */
 }
 .set3-top {
- top: 67% !important;
+  top: 67% !important;
 }
 .이용안내-img1 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/이용시간.png') !important; 
+  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+    url("/public/이용시간.png") !important;
 }
 .이용안내-img2 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/이용금액.png') !important; 
+  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+    url("/public/이용금액.png") !important;
 }
 .이용안내-img3 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/이용절차.png') !important; 
+  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+    url("/public/이용절차.png") !important;
 }
 .시설안내-img1 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/시설1.png') !important; 
+  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+    url("/public/시설1.png") !important;
 }
 .시설안내-img2 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/시설2.png') !important; 
+  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+    url("/public/시설2.png") !important;
 }
 .시설안내-img3 {
- background: linear-gradient(to right, #fff, #fff 1px, transparent)
- ,url('/public/시설3.png') !important; 
+  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+    url("/public/시설3.png") !important;
 }
 
 .map {
- width:1080px !important;
- height:400px;
- border-radius: 20px 20px 0px 0px;
+  width: 1080px !important;
+  height: 400px;
+  border-radius: 20px 20px 0px 0px;
 }
 .guide {
- width: 1080px;
- height:129px;
- background: #FDFCF8;
- border-bottom-left-radius: 20px;
- border-bottom-right-radius: 20px;
+  width: 1080px;
+  height: 129px;
+  background: #fdfcf8;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 .guide ul {
- display: flex;
- flex-direction: row;
- justify-content: space-around;
- height: 100%;
- align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 100%;
+  align-items: center;
 }
-.guide ul li{
- list-style: none;
- float: left;
+.guide ul li {
+  list-style: none;
+  float: left;
 }
-.guide ul li div{
- display: flex;
- gap: 10px
+.guide ul li div {
+  display: flex;
+  gap: 10px;
 }
-.guide ul li div h4{
- line-height: 10px;
+.guide ul li div h4 {
+  line-height: 10px;
 }
-.guide ul li:nth-child(1) h4{
- font-weight: 600;
- font-size: 24px;
- line-height: 10px;
+.guide ul li:nth-child(1) h4 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 10px;
 }
-.guide ul li:nth-child(2) h4{
- font-weight: 600;
- font-size: 16px;
- line-height: 39px;
+.guide ul li:nth-child(2) h4 {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 39px;
 }
-.guide ul li:nth-child(2) p{
- font-weight: 400;
- font-size: 16px;
- line-height: 40px;
+.guide ul li:nth-child(2) p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
 }
-.guide ul li:nth-child(3) h4{
- font-weight: 600;
- font-size: 16px;
- line-height: 39px;
+.guide ul li:nth-child(3) h4 {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 39px;
 }
-.guide ul li:nth-child(3) p{
- font-weight: 400;
- font-size: 16px;
- line-height: 40px;
+.guide ul li:nth-child(3) p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
 }
 .mt-40 {
- /* margin-top:90px; */
+  /* margin-top:90px; */
 }
-.juso, .tel {
- position: relative;
+.juso,
+.tel {
+  position: relative;
 }
-.juso:before, .tel:before {
- content: "";
- width: 10px;
- height: 10px;
- background: #82D3AC;
- border-radius: 30px;
- position: absolute;
- left: -18px;
- top: 15px;
+.juso:before,
+.tel:before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: #82d3ac;
+  border-radius: 30px;
+  position: absolute;
+  left: -18px;
+  top: 15px;
 }
 #map {
-<<<<<<< HEAD
- border-top-left-radius: 20px;
- border-top-right-radius: 20px;
-=======
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
->>>>>>> 76398b156c95c624d6be8a0c31ced33fd9886977
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
