--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,61 +1,65 @@
 .footer-wrapper {
- width:100%;
- height: 258px;
- background: #F9F7F0;
+  width: 100%;
+  height: 258px;
+  background: #f9f7f0;
 }
 .footer-container {
- font-family: "PretendardVariable";
- max-width: 1280px;
- margin: 0 auto;
- width: 100%;
- position: relative;
- padding-top: 60px;
- padding-left: 40px;
+  font-family: 'PretendardVariable';
+  max-width: 1280px;
+  margin: 0 auto;
+  width: 100%;
+  position: relative;
+  padding-top: 60px;
+  padding-left: 40px;
 }
 .footer-info {
- width:759px;
- /* height: 100px; */
- display: flex;
- gap:80px;
+  width: 759px;
+  /* height: 100px; */
+  display: flex;
+  gap: 80px;
 }
 
 .footer-left-info ul,
-.footer-right-info ul{
- display: flex;
- flex-direction: column;
+.footer-right-info ul {
+  display: flex;
+  flex-direction: column;
 }
 
 li {
- list-style-type: none;
+  list-style-type: none;
 }
 
-.left-li, .right-li {
- height: 30px;
- display: flex;
- flex-direction: row;
- gap: 5px;
+.left-li,
+.right-li {
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
 }
 
-.left-li h4, .right-li h4{
- /* line-height: 51px; */
- font-size: 16px;
- font-weight: 600;
+.left-li h4,
+.right-li h4 {
+  /* line-height: 51px; */
+  font-size: 16px;
+  font-weight: 600;
 }
-.left-li p, .right-li p{
- font-size: 16px;
- font-weight: 400;
+.left-li p,
+.right-li p {
+  font-size: 16px;
+  font-weight: 400;
 }
 .footer-title {
- display:flex;
- gap:10px;
- margin-left:40px;
- padding-right: 530px;
+  display: flex;
+  gap: 10px;
+  margin-left: 40px;
+  padding-right: 530px;
 }
 .footer-title-name {
- line-height: 5px;
- color:#81A713;
-
+  line-height: 5px;
+  color: #81a713;
 }
-h4,p,ul {
- margin:0;
+h4,
+p,
+ul {
+  margin: 0;
 }
