--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,68 +1,70 @@
 .login-container {
- font-family: "PretendardVariable";
- background: hsl(48, 56%, 98%);
- width: 100vw;
- height: 100vh;
- display: flex;
- justify-content: center;
- align-items: center;
+  font-family: 'PretendardVariable';
+  background: hsl(48, 56%, 98%);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .login-wrapper {
- width: 376px;
- height:428px;
- box-shadow:2px 3px 5px 0px #F5EFD5;
- background-color: #FFF;
- border-radius: 20px;
+  width: 376px;
+  height: 428px;
+  box-shadow: 2px 3px 5px 0px #f5efd5;
+  background-color: #fff;
+  border-radius: 20px;
 }
-.other-login p{
- font-weight: 400;
- font-size: 12px;
- color: #A6A6A6;
- text-align: center;
+.other-login p {
+  font-weight: 400;
+  font-size: 12px;
+  color: #a6a6a6;
+  text-align: center;
 }
 
 .img-box {
- display: flex;
- justify-content: center;
- margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
 .title {
- margin: 25px;
+  margin: 25px;
 }
 .title p {
- text-align: center;
+  text-align: center;
 }
 
-.title p span{ 
- font-weight: 700;
- font-size: 16px;
+.title p span {
+  font-weight: 700;
+  font-size: 16px;
 }
 
-.kakao img, .google img{
- cursor: pointer;
+.kakao img,
+.google img {
+  cursor: pointer;
 }
-.kakao, .google {
- display: flex;
- justify-content: center;
- margin-bottom: 36px;
+.kakao,
+.google {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 36px;
 }
 .google {
- margin-top: 30px;
+  margin-top: 30px;
 }
 
-.other-login p:before{
- margin:0 5px 3px 0;
- content:"";
- display: inline-block;
- width: 70px;
- height: 1px;
- background: #F2F2F2;
+.other-login p:before {
+  margin: 0 5px 3px 0;
+  content: '';
+  display: inline-block;
+  width: 70px;
+  height: 1px;
+  background: #f2f2f2;
 }
-.other-login p:after{
- content:"";
- display: inline-block;
- width: 70px;
- height: 1px;
- background: #F2F2F2;
- margin:0 0 3px 5px;
+.other-login p:after {
+  content: '';
+  display: inline-block;
+  width: 70px;
+  height: 1px;
+  background: #f2f2f2;
+  margin: 0 0 3px 5px;
 }
