--- a/src/css/noticeDetail.css
+++ b/src/css/noticeDetail.css
@@ -1,7 +1,7 @@
 .notail-container {
   display: flex;
   flex-direction: column;
-  font-family: "PretendardVariable";
+  font-family: 'PretendardVariable';
 }
 
 .notail-subtit-section {
@@ -136,7 +136,7 @@
   align-items: center;
 }
 .notail-comment-list-item {
-  margin-bottom:30px;
+  margin-bottom: 30px;
   width: 1080px;
   display: flex;
   flex-direction: row;
@@ -167,27 +167,26 @@
 .notail-comment-item-details p {
   font-size: 12px;
   font-weight: 400;
-  color:#A6A6A6;
+  color: #a6a6a6;
 }
 .notail-comment-like {
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    margin-left:10px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin-left: 10px;
 }
 
 .notail-comment-like-icon {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
 
-.notail-comment-like-count p{
-    color:#A6A6A6;
+.notail-comment-like-count p {
+  color: #a6a6a6;
 }
-
 
 /* 이전글다음글 */
 .notail-prev-next-btn-section {
@@ -201,18 +200,17 @@
 
 .notail-next-btn {
   width: 1080px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #eee;
 }
 
 .notail-prev-btn {
   width: 1080px;
-  border-top: 1px solid #EEE;
-  border-bottom: 1px solid #EEE;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
 }
 
 .notail-prev-btn ul,
-.notail-next-btn ul
-{ 
+.notail-next-btn ul {
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -220,18 +218,15 @@
 }
 
 .notail-prev-btn ul li,
-.notail-next-btn ul li
-{ 
+.notail-next-btn ul li {
   padding: 10px;
   color: #666666;
-
 }
 
 .notail-prev-btn ul li:nth-child(2),
 .notail-next-btn ul li:nth-child(2) {
   width: 630px;
 }
-
 
 /* 목록버튼 */
 .notail-golist-btn {
@@ -242,12 +237,12 @@
 }
 
 .notail-golist-btn button {
-  background: #82D3AC;
-  width:184px;
-  height:40px;
+  background: #82d3ac;
+  width: 184px;
+  height: 40px;
   font-size: 16px;
   font-weight: 600;
-  color:#FFF;
-  border-radius:8px;
+  color: #fff;
+  border-radius: 8px;
   border: none;
 }
