--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 258px;
   background: #f9f7f0;
+  min-width: 1280px;
 }
 .footer-container {
   font-family: 'PretendardVariable';
