--- a/src/css/login.css
+++ b/src/css/login.css
@@ -8,8 +8,8 @@
   align-items: center;
 }
 .login-wrapper {
-  width: 376px;
-  height: 428px;
+  width: 420px;
+  height: 489px;
   box-shadow: 2px 3px 5px 0px #f5efd5;
   background-color: #fff;
   border-radius: 20px;
@@ -38,18 +38,16 @@
   font-size: 16px;
 }
 
-.kakao img,
-.google img {
+.social-login img {
   cursor: pointer;
 }
-.kakao,
-.google {
+
+.social-login {
   display: flex;
   justify-content: center;
-  margin-bottom: 36px;
-}
-.google {
-  margin-top: 30px;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .other-login p:before {
@@ -67,4 +65,87 @@
   height: 1px;
   background: #f2f2f2;
   margin: 0 0 3px 5px;
+}
+
+.normal-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.normal-login-btn {
+  background: #82d3ac;
+  font-family: 'PretendardVariable';
+  font-weight: 700;
+  font-size: 14px;
+  width: 260px;
+  height: 40px;
+  color: #ffffff;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+
+.login-options {
+  display: flex;
+  justify-content: center;
+}
+.options-ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.options-ul li {
+  color: #a6a6a6;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
+  list-style: none;
+}
+
+.login-title {
+  display: flex;
+  justify-content: center;
+}
+.login-title h3 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #333;
+}
+
+.login-form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.login-form-id,
+.login-form-pw {
+  display: flex;
+  justify-content: center;
+}
+.login-form-id label,
+.login-form-pw label {
+  width: 80px;
+  text-align: left;
+  color: #444444;
+  font-weight: 500;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-form-id input,
+.login-form-pw input{
+  border: 1px solid #F2F2F2;
+  width: 180px;
+  height: 40px;
+  font-family: 'PretendardVariable';
+  border-radius: 8px;
+  outline: none;
+  padding-left: 10px;
 }
