--- a/src/css/section.css
+++ b/src/css/section.css
@@ -29,6 +29,7 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  gap: 10px;
 }
 .section-img-container ul li {
   position: relative;
@@ -47,11 +48,11 @@
   border-radius: 10px;
 }
 .main-img1 {
-  background: linear-gradient(to right, #fff, #fff 5px, transparent),
+  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 0%, rgba(255, 255, 255, 0) 70%),
     url('/public/middle-section.png');
 }
 .main-img2 {
-  background: linear-gradient(to right, #fff, #fff 1px, transparent),
+  background: linear-gradient(-270deg, rgba(255, 255, 255, 0.9) 10%, rgba(255, 255, 255, 0) 113%),
     url('/public/middle-section2.png');
 }
 .img-subtit {
@@ -82,23 +83,30 @@
 .set3-top {
   top: 67% !important;
 }
+
 .이용안내-img1 {
-  background: linear-gradient(to right, #fff, #fff 1px, transparent), url('/public/이용시간.png') !important;
+  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 0%, rgba(255, 255, 255, 0) 70%),
+   url('/public/이용시간.png') !important;
 }
 .이용안내-img2 {
-  background: linear-gradient(to right, #fff, #fff 1px, transparent), url('/public/이용금액.png') !important;
+  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 0%, rgba(255, 255, 255, 0) 70%),
+  url('/public/이용금액.png') !important;
 }
 .이용안내-img3 {
-  background: linear-gradient(to right, #fff, #fff 1px, transparent), url('/public/이용절차.png') !important;
+  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 0%, rgba(255, 255, 255, 0) 70%),
+  url('/public/이용절차.png') !important;
 }
 .시설안내-img1 {
-  background: linear-gradient(to right, #fff, #fff 1px, transparent), url('/public/시설1.png') !important;
+  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 0%, rgba(255, 255, 255, 0) 70%),
+  url('/public/시설1.png') !important;
 }
 .시설안내-img2 {
-  background: linear-gradient(to right, #fff, #fff 1px, transparent), url('/public/시설2.png') !important;
+  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 0%, rgba(255, 255, 255, 0) 70%),
+  url('/public/시설2.png') !important;
 }
 .시설안내-img3 {
-  background: linear-gradient(to right, #fff, #fff 1px, transparent), url('/public/시설3.png') !important;
+  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 0%, rgba(255, 255, 255, 0) 70%),
+  url('/public/시설3.png') !important;
 }
 
 .map {
