--- a/src/css/join.css
+++ b/src/css/join.css
@@ -8,11 +8,12 @@
 .form-container {
   font-family: 'PretendardVariable';
   width: 1280px;
-  height: 960px;
-  margin: 0 auto;
+  height: 100%;
+  margin: 100px auto 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 .join-title {
@@ -30,59 +31,107 @@
   gap: 10px;
 }
 
-.join-form-subitem1 {
-  font-weight: 500;
-  font-size: 16px;
-  width: 87px;
-  display: flex;
-  align-items: center;
-}
-
-.join-form-subitem1 p {
-}
-
-.join-form-subitem2 input {
+.join-form-subitem1 input {
   font-family: inherit;
   font-size: 16px;
-  padding: 3px;
   border-radius: 8px;
   border: 1px solid #f2f2f2;
   /* border-color: #F2F2F2; */
   width: 298px;
   height: 40px;
   transition: border 0.4s;
+  padding: 1px 2px 1px 10px;
 }
+.join-form-subitem1 input::placeholder {
+  color: rgba(128, 128, 128, 0.6);
+}
+
+.join-form-subitem1 input:focus {
+  outline: none;
+  border: 1px solid #4ebba0;
+}
+.join-form-subitem2 input {
+  font-family: inherit;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid #f2f2f2;
+  /* border-color: #F2F2F2; */
+  width: 448px;
+  height: 40px;
+  transition: border 0.4s;
+  padding: 1px 2px 1px 10px;
+}
+.join-form-subitem2 input::placeholder {
+  color: rgba(128, 128, 128, 0.6);
+}
+
 .join-form-subitem2 input:focus {
   outline: none;
   border: 1px solid #4ebba0;
 }
-.join-form-subitem2 textarea {
+.join-form-subitem3 input {
   font-family: inherit;
-  font-family: 'PretendardVariable' !important;
   font-size: 16px;
-  padding: 3px;
   border-radius: 8px;
   border: 1px solid #f2f2f2;
   /* border-color: #F2F2F2; */
-  width: 298px;
+  width: 202px;
   height: 40px;
   transition: border 0.4s;
+  padding: 1px 2px 1px 10px;
 }
-.join-form-subitem2 textarea:focus {
+.join-form-subitem3 input:nth-child(1) {
+  margin-right: 4px;
+}
+.join-form-subitem3 input:nth-child(2) {
+  margin-left: 4px;
+}
+.join-form-subitem3 input::placeholder {
+  color: rgba(128, 128, 128, 0.6);
+}
+
+.join-form-subitem3 input:focus {
   outline: none;
   border: 1px solid #4ebba0;
 }
-
+.join-form-subitem4 textarea {
+  font-family: inherit;
+  font-family: 'PretendardVariable' !important;
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #f2f2f2;
+  /* border-color: #F2F2F2; */
+  width: 440px;
+  height: 100px;
+  transition: border 0.4s;
+  resize: none;
+}
+.join-form-subitem4 textarea:focus {
+  outline: none;
+  border: 1px solid #4ebba0;
+}
+.join-form-subitem4 textarea::placeholder {
+  color: rgba(128, 128, 128, 0.6);
+}
 .join-form-item {
   display: flex;
   gap: 40px;
 }
+.join-check {
+  width: 140px;
+  border: 1px solid #72d5a6;
+  background: #ffffff;
+  color: #333;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 16px;
+  height: 45px;
+  font-family: inherit;
+  cursor: pointer;
+  margin-left: 10px;
 
-.join-form-item p {
-  margin: 0;
-  padding: 0;
 }
-
 .join-btns-wrapper {
   margin-top: 50px;
   display: flex;
@@ -98,13 +147,73 @@
   border: none;
   background: #82d3ac;
   color: #ffffff;
+  margin-bottom: 15px;
 }
 .join-btns-wrapper button {
   border-radius: 8px;
   font-weight: 600;
   font-size: 16px;
-  width: 185px;
+  width: 460px;
   height: 40px;
   font-family: inherit;
   cursor: pointer;
+}
+.other-join p {
+  font-weight: 400;
+  font-size: 12px;
+  color: #a6a6a6;
+  text-align: center;
+}
+.other-join p:before {
+  margin: 0 5px 3px 0;
+  content: '';
+  display: inline-block;
+  width: 175px;
+  height: 1px;
+  background: #f2f2f2;
+}
+.other-join p:after {
+  content: '';
+  display: inline-block;
+  width: 175px;
+  height: 1px;
+  background: #f2f2f2;
+  margin: 0 0 3px 5px;
+}
+.social-join img {
+  cursor: pointer;
+}
+.social-join {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.join-options {
+  display: flex;
+  justify-content: center;
+}
+.join-options .options-ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.join-options .options-ul li {
+  color: #a6a6a6;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
+  list-style: none;
+}
+
+
+
+.margin-top30 {
+  margin-top: 30px;
+}
+.margin-top50 {
+  margin-top: 50px;
 }
