--- a/src/css/join.module.css
+++ b/src/css/join.module.css
@@ -1,19 +1,18 @@
-.join-outer-container {
+.outer-container {
   width: 100%;
   height: 100%;
 }
-.form-inner-container {
+.inner-container {
   margin-bottom: 120px;
 }
 .form-container {
   font-family: 'PretendardVariable';
   width: 1280px;
   height: 100%;
-  margin: 100px auto 0 auto;
+  margin: 100px auto;
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .join-title {
@@ -118,6 +117,38 @@
   display: flex;
   gap: 40px;
 }
+.regex-message {
+  font-size: 14px;
+  color: #FF8888;
+}
+.join-form-select {
+  cursor: default;
+}
+.join-form-select-img {
+  transform: translate(-35px, 5px);
+}
+.join-form-option {
+  font-family: inherit;
+  font-weight: 300;
+  font-size: 16px;
+  width: 448px;
+  /*transition: border 0.4s;*/
+  position: absolute;
+  background-color: #ffffff;
+  padding: 4px 6px;
+  border: 1px solid #f2f2f2;
+  border-radius: 8px;
+  margin-top: 5px;
+}
+.option {
+  padding: 7px 5px;
+  cursor: default;
+}
+.option:hover {
+  background-color: #4ebba0;
+  border-radius: 8px;
+  color: #ffffff
+}
 .join-check {
   width: 140px;
   border: 1px solid #72d5a6;
@@ -134,8 +165,6 @@
 }
 .join-btns-wrapper {
   margin-top: 50px;
-  display: flex;
-  justify-content: center;
   gap: 50px;
 }
 .cancel-join-btn {
@@ -157,6 +186,9 @@
   height: 40px;
   font-family: inherit;
   cursor: pointer;
+}
+.other-join-form {
+  transform: translateX(-13px);
 }
 .other-join p {
   font-weight: 400;
