--- a/src/css/chat/chat.css
+++ b/src/css/chat/chat.css
@@ -12,14 +12,14 @@
 }
 
 .chatting-list-container {
-  border:1px solid #f6f6f6;
+  border: 1px solid #f6f6f6;
   width: 425px;
   height: 666px;
   overflow: hidden;
 }
 
 .chatting-list-tit {
- border-bottom: 1px solid #f6f6f6;
+  border-bottom: 1px solid #f6f6f6;
   width: 100%;
   height: 75px;
   position: inherit;
@@ -100,14 +100,13 @@
 
 /* 메세지영역시작 */
 .chatting-msg-container {
- border: 1px solid #f6f6f6;
- width: 743px;
- height: 666px;
- }
- 
- .chatting-msg-opposite-info {
- 
- border-bottom: 1px solid #f6f6f6;
+  border: 1px solid #f6f6f6;
+  width: 743px;
+  height: 666px;
+}
+
+.chatting-msg-opposite-info {
+  border-bottom: 1px solid #f6f6f6;
   position: relative;
   width: 100%;
   display: flex;
@@ -143,12 +142,12 @@
   flex-direction: row;
   margin: 10px 0 35px 10px;
 }
-.other-msg-card-left{
- padding: 15px 0 0 0px;
+.other-msg-card-left {
+  padding: 15px 0 0 0px;
 }
-.other-msg-card-left img{
- width: 40px;
- height: 40px;
+.other-msg-card-left img {
+  width: 40px;
+  height: 40px;
 }
 .other-msg-card-right {
   margin-left: 5px;
@@ -172,91 +171,89 @@
 }
 
 .chatting-my-msg-card {
- float: right;
- margin-right: 10px;
- width: 276px;
- height: 58px;
- margin-right: 12px;
- margin-bottom: 35px;
- 
- }
- .my-msg-card-right-content {
+  float: right;
+  margin-right: 10px;
+  width: 276px;
+  height: 58px;
+  margin-right: 12px;
+  margin-bottom: 35px;
+}
+.my-msg-card-right-content {
   border-radius: 14px 4px 14px 14px;
- background: #4C9F8B;
- width: auto;
- height: auto;
+  background: #4c9f8b;
+  width: auto;
+  height: auto;
 }
 .chatting-my-msg-card p {
   font-weight: 400;
   font-size: 14px;
-  color: #FFF;
+  color: #fff;
   padding: 10px;
 }
 
-
 .chatting-msg-container-wrapper {
- height: 470px;
- overflow-y: scroll;
+  height: 470px;
+  overflow-y: scroll;
 }
 
 .chatting-msg-send-container {
- display: flex;
- flex-direction: row;
- height: 115px;
- width: 100%;
- justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  height: 115px;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .chatting-msg-send-content {
- position: relative;
- height: 100px;
- margin-left: 8px;
+  position: relative;
+  height: 100px;
+  margin-left: 8px;
 }
-.chatting-msg-send-content img{
- position: absolute;
- left:10px;
- bottom:13px;
+.chatting-msg-send-content img {
+  position: absolute;
+  left: 10px;
+  bottom: 13px;
 }
-.chatting-msg-send-content textarea{
- width: 600px;
- height: 100%;
- outline: none;
- border: 1px solid #f2f2f2;
- font-family: 'PretendardVariable';
- padding: 4px 0 0 4px;
+.chatting-msg-send-content textarea {
+  width: 600px;
+  height: 100%;
+  outline: none;
+  border: 1px solid #f2f2f2;
+  font-family: 'PretendardVariable';
+  padding: 4px 0 0 4px;
 
- border-radius: 8px;
- padding-left: 5px;
+  border-radius: 8px;
+  padding-left: 5px;
 }
-.chatting-msg-send-btn{
- width: 100%;
+.chatting-msg-send-btn {
+  width: 100%;
 }
 
-.chatting-msg-send-btn button{
- width: 84px;
- height: 40px;
- background: #82D3AC;
- border-radius: 8px;
- color: #FFF;
- font-family: 'PretendardVariable';
- font-weight: 600;
- font-size: 14px;
- border: none;
- margin-left: 5px;
- cursor: pointer;
+.chatting-msg-send-btn button {
+  width: 84px;
+  height: 40px;
+  background: #82d3ac;
+  border-radius: 8px;
+  color: #fff;
+  font-family: 'PretendardVariable';
+  font-weight: 600;
+  font-size: 14px;
+  border: none;
+  margin-left: 5px;
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar {
- width: 4px;  /* 세로축 스크롤바 폭 너비 */
- height: 1px;  /* 가로축 스크롤바 폭 너비 */
-}/* 스크롤바 막대 */
+  width: 4px; /* 세로축 스크롤바 폭 너비 */
+  height: 1px; /* 가로축 스크롤바 폭 너비 */
+} /* 스크롤바 막대 */
 ::-webkit-scrollbar-thumb {
-    background: #82D3AC; /* 스크롤바 막대 색상 */
-    border-radius: 12px 12px 12px 12px;
+  background: #82d3ac; /* 스크롤바 막대 색상 */
+  border-radius: 12px 12px 12px 12px;
 }
 
 /* 스크롤이 움직이는 뒷 배경 */
 ::-webkit-scrollbar-track {
-	/* background: #d0d0d0;  */
- /* 스크롤바 뒷 배경 색상 */
+  /* background: #d0d0d0;  */
+  /* 스크롤바 뒷 배경 색상 */
 }
