--- a/src/css/guide.css
+++ b/src/css/guide.css
@@ -99,22 +99,22 @@
   /* width: 500px; */
   font-size: 40px;
   font-weight: 700;
-  color: #FFF;
+  color: #fff;
 }
 .for-support {
   left: 492px !important;
 }
-.img-title h3{
+.img-title h3 {
   text-align: center;
 }
 .guide-img1 {
-  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 40%, rgba(255, 255, 255, 0) 100%),
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.6) 40%, rgba(255, 255, 255, 0) 100%),
     url('/public/이용안내-이용시간.png');
   /* border-radius: 20px;
 background: linear-gradient(270deg, rgba(255, 255, 255, 0.00) 0%, #FFF 100%), url('/public/이용안내-이용시간.png'); */
 }
 .guide-img2 {
-  background: linear-gradient(0deg, rgba(255, 255, 255, .6) 40%, rgba(255, 255, 255, 0) 100%),
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.6) 40%, rgba(255, 255, 255, 0) 100%),
     url('/public/이용안내-이용문의.png');
 
   /* background: linear-gradient(270deg, rgba(255, 255, 255, 0.00) 0%, #FFF 100%), url('/public/이용안내-이용문의.png'); */
