--- a/src/css/memberFind.module.css
+++ b/src/css/memberFind.module.css
@@ -1,307 +1,302 @@
 .container {
-
 }
 .wrap {
-    width: 370px;
-    align-items: center;
-    justify-content: center;
-    margin: 100px auto 0 auto;
-    text-align: center;
-    font-family: 'PretendardVariable';
-
+  width: 370px;
+  align-items: center;
+  justify-content: center;
+  margin: 100px auto 0 auto;
+  text-align: center;
+  font-family: 'PretendardVariable';
 }
 .main-title {
-    border-bottom: 3px solid #82D3AC;
-    font-size: 17px;
+  border-bottom: 3px solid #82d3ac;
+  font-size: 17px;
 }
 .title-id-find1 {
-    width: 185px;
-    height: 40px;
-    line-height: 40px;
-    display: inline-block;
-    background-color: #82D3AC;
-    color: #ffffff;
-    border-radius: 10px 0 0 0 ;
-    cursor: pointer;
+  width: 185px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  background-color: #82d3ac;
+  color: #ffffff;
+  border-radius: 10px 0 0 0;
+  cursor: pointer;
 }
 .title-pw-find1 {
-    width: 185px;
-    height: 40px;
-    line-height: 40px;
-    display: inline-block;
-    border-radius: 0 10px 0 0 ;
-    cursor: pointer;
+  width: 185px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  border-radius: 0 10px 0 0;
+  cursor: pointer;
 }
 .title-id-find2 {
-    width: 185px;
-    height: 40px;
-    line-height: 40px;
-    display: inline-block;
-    border-radius: 0 10px 0 0 ;
-    cursor: pointer;
+  width: 185px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  border-radius: 0 10px 0 0;
+  cursor: pointer;
 }
 .title-pw-find2 {
-    width: 185px;
-    height: 40px;
-    line-height: 40px;
-    display: inline-block;
-    background-color: #82D3AC;
-    color: #ffffff;
-    border-radius: 0 10px 0 0 ;
-    cursor: pointer;
+  width: 185px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  background-color: #82d3ac;
+  color: #ffffff;
+  border-radius: 0 10px 0 0;
+  cursor: pointer;
 }
 .find-form {
 }
 .sub-title {
-    color: #333333;
-    font-weight: bold;
-    text-align: left;
-    margin: 40px 0 30px 0;
-    font-size: 18px;
+  color: #333333;
+  font-weight: bold;
+  text-align: left;
+  margin: 40px 0 30px 0;
+  font-size: 18px;
 }
 .find-item {
-    margin-top: 5px;
-    margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 .find-sub-item {
-
 }
 .find-sub-item input {
-    font-family: inherit;
-    font-size: 16px;
-    border-radius: 8px;
-    border: 1px solid #f2f2f2;
-    width: 356px;
-    height: 40px;
-    transition: border 0.4s;
-    padding: 1px 2px 1px 10px;
+  font-family: inherit;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid #f2f2f2;
+  width: 356px;
+  height: 40px;
+  transition: border 0.4s;
+  padding: 1px 2px 1px 10px;
 }
 .find-sub-item input::placeholder {
-    color: rgba(128, 128, 128, 0.6);
+  color: rgba(128, 128, 128, 0.6);
 }
 .find-sub-item input:focus {
-    outline: none;
-    border: 1px solid #82D3AC;
+  outline: none;
+  border: 1px solid #82d3ac;
 }
 .id-verify-message {
-    color: #A6A6A6;
-    position: absolute;
-    font-size: 12px;
-    transform: translateX(-180px);
-    border-bottom: 1px solid #A6A6A6;
-    cursor: pointer;
+  color: #a6a6a6;
+  position: absolute;
+  font-size: 12px;
+  transform: translateX(-180px);
+  border-bottom: 1px solid #a6a6a6;
+  cursor: pointer;
 }
 .id-fail-verify-message {
-    color: #FF8888;
-    position: absolute;
-    font-size: 12px;
-    transform: translateX(-180px);
+  color: #ff8888;
+  position: absolute;
+  font-size: 12px;
+  transform: translateX(-180px);
 }
 .id-fail-verify-num-message {
-    color: #FF8888;
-    position: absolute;
-    font-size: 12px;
-    transform: translate(-180px,17px);
+  color: #ff8888;
+  position: absolute;
+  font-size: 12px;
+  transform: translate(-180px, 17px);
 }
 .fail-message {
-    color: #FF8888;
-    position: absolute;
-    font-size: 12px;
-    margin-top: 5px;
-    transform: translateX(-175px);
+  color: #ff8888;
+  position: absolute;
+  font-size: 12px;
+  margin-top: 5px;
+  transform: translateX(-175px);
 }
 .find-name {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .find-select {
-    cursor: default;
+  cursor: default;
 }
 .find-select-img {
-    position: absolute;
-    transform: translate(-35px, 9px);
+  position: absolute;
+  transform: translate(-35px, 9px);
 }
 .find-option {
-    font-family: inherit;
-    font-weight: 300;
-    font-size: 16px;
-    width: 356px;
-    /*transition: border 0.4s;*/
-    position: absolute;
-    background-color: #ffffff;
-    padding: 4px 6px;
-    border: 1px solid #f2f2f2;
-    border-radius: 8px;
-    margin-top: 5px;
-    text-align: left;
-    z-index: 1;
+  font-family: inherit;
+  font-weight: 300;
+  font-size: 16px;
+  width: 356px;
+  /*transition: border 0.4s;*/
+  position: absolute;
+  background-color: #ffffff;
+  padding: 4px 6px;
+  border: 1px solid #f2f2f2;
+  border-radius: 8px;
+  margin-top: 5px;
+  text-align: left;
+  z-index: 1;
 }
 .option {
-    padding: 7px 5px;
-    cursor: default;
+  padding: 7px 5px;
+  cursor: default;
 }
 .option:hover {
-    background-color: #82D3AC;
-    border-radius: 8px;
-    color: #ffffff
+  background-color: #82d3ac;
+  border-radius: 8px;
+  color: #ffffff;
 }
 .find-item1 {
-    margin-top: 5px;
-    margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 .find-sub-item2 input {
-    font-family: inherit;
-    font-size: 16px;
-    border-radius: 8px;
-    border: 1px solid #f2f2f2;
-    width: 226px;
-    height: 40px;
-    transition: border 0.4s;
-    padding: 1px 2px 1px 10px;
+  font-family: inherit;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid #f2f2f2;
+  width: 226px;
+  height: 40px;
+  transition: border 0.4s;
+  padding: 1px 2px 1px 10px;
 }
 .find-sub-item2 input::placeholder {
-    color: rgba(128, 128, 128, 0.6);
+  color: rgba(128, 128, 128, 0.6);
 }
 .find-sub-item2 input:focus {
-    outline: none;
-    border: 1px solid #82D3AC;
+  outline: none;
+  border: 1px solid #82d3ac;
 }
 .find-button {
-    width: 120px;
-    border: 1px solid #82D3AC;
-    background: #ffffff;
-    color: #333;
-    border-radius: 8px;
-    font-weight: 600;
-    font-size: 14px;
-    height: 45px;
-    font-family: inherit;
-    cursor: pointer;
-    margin-left: 10px;
+  width: 120px;
+  border: 1px solid #82d3ac;
+  background: #ffffff;
+  color: #333;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 14px;
+  height: 45px;
+  font-family: inherit;
+  cursor: pointer;
+  margin-left: 10px;
 }
 .find-btn-wrap {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 .find-btn {
-    border: none;
-    background: #82d3ac;
-    color: #ffffff;
-    margin-bottom: 15px;
-    border-radius: 8px;
-    font-weight: 600;
-    font-size: 16px;
-    width: 370px;
-    height: 40px;
-    font-family: inherit;
-    cursor: pointer;
+  border: none;
+  background: #82d3ac;
+  color: #ffffff;
+  margin-bottom: 15px;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 16px;
+  width: 370px;
+  height: 40px;
+  font-family: inherit;
+  cursor: pointer;
 }
 .other-find-form {
 }
 .other-find p {
-    font-weight: 400;
-    font-size: 12px;
-    color: #a6a6a6;
-    text-align: center;
+  font-weight: 400;
+  font-size: 12px;
+  color: #a6a6a6;
+  text-align: center;
 }
 .other-find p:before {
-    margin: 0 5px 3px 0;
-    content: '';
-    display: inline-block;
-    width: 130px;
-    height: 1px;
-    background: #f2f2f2;
+  margin: 0 5px 3px 0;
+  content: '';
+  display: inline-block;
+  width: 130px;
+  height: 1px;
+  background: #f2f2f2;
 }
 .other-find p:after {
-    content: '';
-    display: inline-block;
-    width: 130px;
-    height: 1px;
-    background: #f2f2f2;
-    margin: 0 0 3px 5px;
+  content: '';
+  display: inline-block;
+  width: 130px;
+  height: 1px;
+  background: #f2f2f2;
+  margin: 0 0 3px 5px;
 }
 .social-find img {
-    cursor: pointer;
+  cursor: pointer;
 }
 .social-find {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .find-options {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .find-options .options-ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 .find-options .options-ul li {
-    color: #a6a6a6;
-    font-size: 12px;
-    font-weight: 400;
-    cursor: pointer;
-    list-style: none;
+  color: #a6a6a6;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
+  list-style: none;
 }
 .modal-wrap {
-    text-align: center;
-    font-family: 'PretendardVariable';
+  text-align: center;
+  font-family: 'PretendardVariable';
 }
 .modal-title {
-    font-size: 20px;
-    font-weight: 600;
-    color: #666666;
-    margin-bottom: 40px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #666666;
+  margin-bottom: 40px;
 }
 .modal-text1 {
-    color: #666666;
-    font-size: 15px;
-    margin-bottom: 5px;
+  color: #666666;
+  font-size: 15px;
+  margin-bottom: 5px;
 }
 .modal-text2 {
-    color: #666666;
-    font-size: 15px;
+  color: #666666;
+  font-size: 15px;
 }
-.modal-text2 span{
-    color: #82D3AC;
-    font-weight: 700;
+.modal-text2 span {
+  color: #82d3ac;
+  font-weight: 700;
 }
 .modal-button-wrap {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 .modal-close {
-    width: 180px;
-    height: 40px;
-    margin-right: 2px;
-    border-radius: 10px;
-    border: 1px solid #82D3AC;
-    background-color: #ffffff;
-    cursor: pointer;
+  width: 180px;
+  height: 40px;
+  margin-right: 2px;
+  border-radius: 10px;
+  border: 1px solid #82d3ac;
+  background-color: #ffffff;
+  cursor: pointer;
 }
 .modal-login {
-    width: 180px;
-    height: 40px;
-    margin-left: 2px;
-    border-radius: 10px;
-    background-color: #82D3AC;
-    border: 1px solid #82D3AC;
-    color: #ffffff;
-    cursor: pointer;
+  width: 180px;
+  height: 40px;
+  margin-left: 2px;
+  border-radius: 10px;
+  background-color: #82d3ac;
+  border: 1px solid #82d3ac;
+  color: #ffffff;
+  cursor: pointer;
 }
-
-
 
 /*input:number 태그 화살표 지우기*/
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Firefox  */
 input[type='number'] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
