--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -41,12 +41,11 @@
   float: right !important;
 }
 
-
 /* 네비 호버영역 */
 .nav-hover {
   width: 1280px;
   height: 224px;
-  background: #FFFFFF;
+  background: #ffffff;
   z-index: 99;
   position: absolute;
   display: flex;
@@ -67,7 +66,7 @@
   padding: 0;
 }
 
-.menu-hover li{
+.menu-hover li {
   width: 72px;
   height: 38px;
   font-weight: 400;
