--- a/src/css/notice.css
+++ b/src/css/notice.css
@@ -183,12 +183,12 @@
   position: absolute;
   right: 8px;
 }
-.page-btn-write > button{
+.page-btn-write > button {
   font-family: 'PretendardVariable';
-  border: 1px solid #82D3AC;
+  border: 1px solid #82d3ac;
   width: 120px;
   height: 40px;
   cursor: pointer;
-  background: #FFF;
+  background: #fff;
   border-radius: 8px;
 }
