--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -1,307 +1,302 @@
 .container {
-    width: 80%;
-    margin: 30px auto 0 auto;
+  width: 80%;
+  margin: 30px auto 0 auto;
 }
 .main-img {
-    width: 100%;
-    position: relative;
+  width: 100%;
+  position: relative;
 }
 .wrap {
-    width: 100%;
-    background-color: #ffffff;
-    border-radius: 30px 30px 0 0;
-    z-index: 1;
-    transform: translateY(-250px);
-    padding-top: 60px;
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 30px 30px 0 0;
+  z-index: 1;
+  transform: translateY(-250px);
+  padding-top: 60px;
 }
 .profile-info {
-    padding: 0 60px;
-
+  padding: 0 60px;
 }
 .profile-info label {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .profile-my-img {
-    border-radius: 100%;
-    border: 1px solid black;
-    width: 120px;
-    height: 120px;
+  border-radius: 100%;
+  border: 1px solid black;
+  width: 120px;
+  height: 120px;
 }
 .profile-setup {
-    width: 36px;
-    height: 36px;
-    border: 1px solid black;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: translate(80px, 80px);
-    cursor: pointer;
-    background-color: #82D3AC;
+  width: 36px;
+  height: 36px;
+  border: 1px solid black;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translate(80px, 80px);
+  cursor: pointer;
+  background-color: #82d3ac;
 }
 .profile-my-img img {
-    width: 30px;
-    height: 30px;
-
+  width: 30px;
+  height: 30px;
 }
 
 .profile-name {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 .profile-name .name {
-    font-size: 22px;
-    font-weight: bold;
-    margin-bottom: 10px;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 .profile-name .protect {
-    color: #737373;
-    font-size: 14px;
+  color: #737373;
+  font-size: 14px;
 }
 .profile-name .intro {
-    color: #737373;
-    font-size: 14px;
+  color: #737373;
+  font-size: 14px;
 }
 .profile-follow {
-   margin-left: auto;
-    margin-right: 150px;
+  margin-left: auto;
+  margin-right: 150px;
 }
 .follow {
-    display: inline-block;
-    margin-right: 30px;
+  display: inline-block;
+  margin-right: 30px;
 }
 .follow span:nth-child(1) {
-    font-size: 18px;
-    font-weight: bold;
+  font-size: 18px;
+  font-weight: bold;
 }
 .follow span:nth-child(2) {
-    display: block;
-    font-size: 14px;
-    padding-left: 3px;
+  display: block;
+  font-size: 14px;
+  padding-left: 3px;
 }
 .follower {
-    display: inline-block;
+  display: inline-block;
 }
 .follower span:nth-child(1) {
-    font-size: 18px;
-    font-weight: bold;
+  font-size: 18px;
+  font-weight: bold;
 }
 .follower span:nth-child(2) {
-    display: block;
-    font-size: 14px;
-    padding-left: 3px;
+  display: block;
+  font-size: 14px;
+  padding-left: 3px;
 }
 .follow-btn-wrap {
-    position: absolute;
-    right: 0;
-    transform: translate(-100px,-80px);
+  position: absolute;
+  right: 0;
+  transform: translate(-100px, -80px);
 }
 .unfollow-btn {
-    width: 85px;
-    height: 35px;
-    background-color: rgba(115, 115, 115, 0.5);
-    border: none;
-    color: black;
-    border-radius: 10px;
-    font-size: 14px;
-    margin-left: 45px;
-    cursor: pointer;
+  width: 85px;
+  height: 35px;
+  background-color: rgba(115, 115, 115, 0.5);
+  border: none;
+  color: black;
+  border-radius: 10px;
+  font-size: 14px;
+  margin-left: 45px;
+  cursor: pointer;
 }
 .follow-btn {
-    width: 85px;
-    height: 35px;
-    background-color: #82D3AC;
-    border: none;
-    color: #ffffff;
-    border-radius: 10px;
-    font-size: 14px;
-    margin-left: 45px;
-    cursor: pointer;
+  width: 85px;
+  height: 35px;
+  background-color: #82d3ac;
+  border: none;
+  color: #ffffff;
+  border-radius: 10px;
+  font-size: 14px;
+  margin-left: 45px;
+  cursor: pointer;
 }
 .profile-board {
-    margin-top: 70px;
-    padding: 0 60px;
+  margin-top: 70px;
+  padding: 0 60px;
 }
-.profile-board label{
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
+.profile-board label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
 }
 .profile-board-img {
-    border-radius: 100%;
-    border: 1px solid black;
-    width: 48px;
-    height: 48px;
+  border-radius: 100%;
+  border: 1px solid black;
+  width: 48px;
+  height: 48px;
 }
 .profile-board-name .name {
-    margin-left: 10px;
-    font-weight: bold;
+  margin-left: 10px;
+  font-weight: bold;
 }
 .profile-board-list-img {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 .profile-board-img-report {
-    position: absolute;
-    right: 80px;
-    transform: translateY(20px);
+  position: absolute;
+  right: 80px;
+  transform: translateY(20px);
 }
-.profile-board-img-report img:nth-child(1){
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
+.profile-board-img-report img:nth-child(1) {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
 }
 .report-open {
-    position: absolute;
-    right: 0;
-    background-color: #ffffff;
-    text-align: left;
-    width: 120px;
-    height: 40px;
-    line-height: 40px;
-    border-radius: 10px;
-    padding-left: 10px;
+  position: absolute;
+  right: 0;
+  background-color: #ffffff;
+  text-align: left;
+  width: 120px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 10px;
+  padding-left: 10px;
 }
-.report-open span{
-    font-size: 14px;
-    cursor: pointer;
+.report-open span {
+  font-size: 14px;
+  cursor: pointer;
 }
 
-.profile-board-list-img img:nth-child(2){
-    width: 100%;
-    height: 400px;
-    border-radius: 10px;
+.profile-board-list-img img:nth-child(2) {
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
 }
 .profile-board-icon {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 .profile-board-icon label {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-.profile-board-icon span:nth-child(1) img{
-    width: 30px;
-    height: 30px;
+.profile-board-icon span:nth-child(1) img {
+  width: 30px;
+  height: 30px;
 }
-.profile-board-icon span:nth-child(2) img{
-    width: 25px;
-    height: 25px;
+.profile-board-icon span:nth-child(2) img {
+  width: 25px;
+  height: 25px;
 }
 .profile-board-content {
-    margin-top: 20px;
-    font-size: 14px;
-
+  margin-top: 20px;
+  font-size: 14px;
 }
 .profile-board-date {
-    color: #A6A6A6;
-    font-size: 12px;
-    margin-top: 20px;
+  color: #a6a6a6;
+  font-size: 12px;
+  margin-top: 20px;
 }
 .profile-comment {
-    margin-top: 70px;
-    padding: 0 60px;
+  margin-top: 70px;
+  padding: 0 60px;
 }
 .profile-comment-title {
-    font-size: 18px;
-    font-weight: bold;
+  font-size: 18px;
+  font-weight: bold;
 }
 .profile-comment-insert {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .profile-comment-insert label {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .profile-comment-img {
-    border-radius: 100%;
-    border: 1px solid black;
-    width: 48px;
-    height: 48px;
-    margin-right: 20px;
+  border-radius: 100%;
+  border: 1px solid black;
+  width: 48px;
+  height: 48px;
+  margin-right: 20px;
 }
 .profile-comment-insert input {
-    font-family: inherit;
-    font-size: 16px;
-    border-radius: 8px;
-    border: 1px solid #f2f2f2;
-    /* border-color: #F2F2F2; */
-    width: 85%;
-    height: 36px;
-    transition: border 0.4s;
-    padding: 1px 2px 1px 10px;
-    margin-right: 5px;
+  font-family: inherit;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid #f2f2f2;
+  /* border-color: #F2F2F2; */
+  width: 85%;
+  height: 36px;
+  transition: border 0.4s;
+  padding: 1px 2px 1px 10px;
+  margin-right: 5px;
 }
 .profile-comment-insert input::placeholder {
-    color: rgba(128, 128, 128, 0.6);
+  color: rgba(128, 128, 128, 0.6);
 }
 
 .profile-comment-insert input:focus {
-    outline: none;
-    border: 1px solid #4ebba0;
+  outline: none;
+  border: 1px solid #4ebba0;
 }
 .profile-comment-btn {
-    width: 85px;
-    height: 40px;
-    background-color: #82D3AC;
-    border: none;
-    color: #ffffff;
-    border-radius: 10px;
-    font-size: 14px;
-    cursor: pointer;
-    margin-left: 5px;
+  width: 85px;
+  height: 40px;
+  background-color: #82d3ac;
+  border: none;
+  color: #ffffff;
+  border-radius: 10px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-left: 5px;
 }
 .profile-comment-list {
-    margin-top: 30px;
-
+  margin-top: 30px;
 }
-.profile-comment-list label{
-    display: flex;
+.profile-comment-list label {
+  display: flex;
 }
 .profile-comment-list-txt {
-    width: 80%;
+  width: 80%;
 }
 .profile-comment-list-img {
-    border-radius: 100%;
-    border: 1px solid black;
-    width: 48px;
-    height: 48px;
-    margin-right: 15px;
+  border-radius: 100%;
+  border: 1px solid black;
+  width: 48px;
+  height: 48px;
+  margin-right: 15px;
 }
 .profile-comment-list-name {
-    font-weight: bold;
-    margin-bottom: 8px;
+  font-weight: bold;
+  margin-bottom: 8px;
 }
 .profile-comment-list-content {
 }
 .profile-comment-list-date {
-    font-size: 12px;
-    color: #A6A6A6;
-    margin-top: 10px;
+  font-size: 12px;
+  color: #a6a6a6;
+  margin-top: 10px;
 }
-.profile-comment-list-date span:nth-child(1){
-    margin-right: 7px;
+.profile-comment-list-date span:nth-child(1) {
+  margin-right: 7px;
 }
-.profile-comment-list-date span:nth-child(2){
-    margin-right: 5px;
-    cursor: pointer;
+.profile-comment-list-date span:nth-child(2) {
+  margin-right: 5px;
+  cursor: pointer;
 }
-.profile-comment-list-date span:nth-child(3){
-    cursor: pointer;
-
+.profile-comment-list-date span:nth-child(3) {
+  cursor: pointer;
 }
 .profile-comment-list-like {
-    transform: translate(50px, 20px);
+  transform: translate(50px, 20px);
 }
 .profile-comment-list-like-img {
-    display: inline-block;
+  display: inline-block;
 }
 .profile-comment-list-like-img span {
 }
 .profile-comment-list-like img {
-    transform: translateX(5px);
-    display: table-cell;
-    vertical-align: middle;
-    width: 25px;
-    height: 25px;
+  transform: translateX(5px);
+  display: table-cell;
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
 }
 
 .profile-comment-list-like .like {
@@ -309,161 +304,159 @@
 
 /*--------모달-----------*/
 .report-modal-check-wrap {
-    text-align: center;
-    font-family: 'PretendardVariable';
+  text-align: center;
+  font-family: 'PretendardVariable';
 }
 .report-modal-check-title {
-    font-size: 20px;
-    font-weight: 600;
-    color: #666666;
-    margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #666666;
+  margin-bottom: 30px;
 }
 .report-modal-check-text1 {
-    color: #666666;
-    font-size: 15px;
-    margin-bottom: 5px;
+  color: #666666;
+  font-size: 15px;
+  margin-bottom: 5px;
 }
 .report-modal-check-text2 {
-    color: #666666;
-    font-size: 15px;
+  color: #666666;
+  font-size: 15px;
 }
-.report-modal-check-text2 span{
-    color: #82D3AC;
-    font-weight: 700;
+.report-modal-check-text2 span {
+  color: #82d3ac;
+  font-weight: 700;
 }
 .report-modal-check-button-wrap {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 .report-modal-check-cancel {
-    width: 140px;
-    height: 40px;
-    margin-left: 2px;
-    border-radius: 10px;
-    background-color: #82D3AC;
-    border: 1px solid #82D3AC;
-    color: #ffffff;
-    cursor: pointer;
+  width: 140px;
+  height: 40px;
+  margin-left: 2px;
+  border-radius: 10px;
+  background-color: #82d3ac;
+  border: 1px solid #82d3ac;
+  color: #ffffff;
+  cursor: pointer;
 }
 .report-modal-check-report {
-    width: 140px;
-    height: 40px;
-    margin-right: 2px;
-    border-radius: 10px;
-    border: 1px solid #82D3AC;
-    background-color: #ffffff;
-    cursor: pointer;
+  width: 140px;
+  height: 40px;
+  margin-right: 2px;
+  border-radius: 10px;
+  border: 1px solid #82d3ac;
+  background-color: #ffffff;
+  cursor: pointer;
 }
 .report-modal-cause-wrap {
-    text-align: center;
-    font-family: 'PretendardVariable';
+  text-align: center;
+  font-family: 'PretendardVariable';
 }
 .report-modal-cause-title {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .report-modal-cause-title .title {
-    font-weight: bold;
-    left: 0;
-    margin-bottom: 30px;
-    font-size: 18px;
-
+  font-weight: bold;
+  left: 0;
+  margin-bottom: 30px;
+  font-size: 18px;
 }
-.report-modal-cause-title img{
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
+.report-modal-cause-title img {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
 }
 .report-modal-cause-text {
-
 }
 .report-modal-cause-text label {
-    justify-content: space-between;
-    display: flex;
-    margin-bottom: 25px;
+  justify-content: space-between;
+  display: flex;
+  margin-bottom: 25px;
 }
 .report-modal-cause-text .text {
-    color: #333333;
+  color: #333333;
 }
 .report-modal-cause-text .text-default {
-    color: #333333;
-    text-align: left;
-    font-size: 16px;
-    margin-bottom: 10px;
+  color: #333333;
+  text-align: left;
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 .report-modal-cause-text .text-textarea {
-    resize: none;
-    width: 355px;
-    height: 150px;
-    font-family: inherit;
-    font-size: 16px;
-    border-radius: 8px;
-    border: 1px solid #f2f2f2;
-    transition: border 0.4s;
-    padding: 10px;
-    margin-right: 5px;
-    overflow: auto;
+  resize: none;
+  width: 355px;
+  height: 150px;
+  font-family: inherit;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid #f2f2f2;
+  transition: border 0.4s;
+  padding: 10px;
+  margin-right: 5px;
+  overflow: auto;
 }
 .report-modal-cause-text .text-textarea:focus {
-    outline: none;
-    border: 1px solid #4ebba0;
+  outline: none;
+  border: 1px solid #4ebba0;
 }
 .report-modal-cause-button-wrap {
-    margin-top: 20px;
-    text-align: right;
+  margin-top: 20px;
+  text-align: right;
 }
 .report-modal-cause-close {
-    width: 90px;
-    height: 40px;
-    margin-right: 2px;
-    border-radius: 10px;
-    border: 1px solid #82D3AC;
-    background-color: #ffffff;
-    cursor: pointer;
-    font-weight: bold;
+  width: 90px;
+  height: 40px;
+  margin-right: 2px;
+  border-radius: 10px;
+  border: 1px solid #82d3ac;
+  background-color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
 }
 .report-modal-cause-report {
-    width: 90px;
-    height: 40px;
-    margin-left: 2px;
-    border-radius: 10px;
-    background-color: #82D3AC;
-    border: 1px solid #82D3AC;
-    color: #ffffff;
-    cursor: pointer;
-    font-weight: bold;
+  width: 90px;
+  height: 40px;
+  margin-left: 2px;
+  border-radius: 10px;
+  background-color: #82d3ac;
+  border: 1px solid #82d3ac;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
 }
 .report-modal-finish-wrap {
-    text-align: center;
-    font-family: 'PretendardVariable';
+  text-align: center;
+  font-family: 'PretendardVariable';
 }
 .report-modal-finish-title {
-    font-size: 20px;
-    font-weight: 600;
-    color: #666666;
-    margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #666666;
+  margin-bottom: 30px;
 }
 .report-modal-finish-text1 {
-    color: #666666;
-    font-size: 15px;
-    margin-bottom: 5px;
+  color: #666666;
+  font-size: 15px;
+  margin-bottom: 5px;
 }
 .report-modal-finish-text2 {
-    color: #666666;
-    font-size: 15px;
+  color: #666666;
+  font-size: 15px;
 }
-.report-modal-finish-text2 span{
-    color: #82D3AC;
-    font-weight: 700;
+.report-modal-finish-text2 span {
+  color: #82d3ac;
+  font-weight: 700;
 }
 .report-modal-finish-button-wrap {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 .report-modal-finish-report {
-    width: 180px;
-    height: 40px;
-    margin-right: 2px;
-    border-radius: 10px;
-    border: 1px solid #82D3AC;
-    background-color: #ffffff;
-    cursor: pointer;
+  width: 180px;
+  height: 40px;
+  margin-right: 2px;
+  border-radius: 10px;
+  border: 1px solid #82d3ac;
+  background-color: #ffffff;
+  cursor: pointer;
 }
